type attribute not required in HTML5
type attribute not required in HTML5

--- a/load.html
+++ b/load.html
@@ -1,74 +1,75 @@
-<script src="javascript/Box2D/Common/b2Settings.js" type="text/javascript"></script>
-<script src="javascript/Box2D/Common/Math/b2Vec2.js" type="text/javascript"></script>
-<script src="javascript/Box2D/Collision/b2BufferedPair.js" type="text/javascript"></script>
-<script src="javascript/Box2D/Collision/b2AABB.js" type="text/javascript"></script>
-<script src="javascript/Box2D/Collision/b2Pair.js" type="text/javascript"></script>
-<script src="javascript/Box2D/Dynamics/b2TimeStep.js" type="text/javascript"></script>
-<script src="javascript/Box2D/Collision/b2Manifold.js" type="text/javascript"></script>
-<script src="javascript/Box2D/Collision/b2Point.js" type="text/javascript"></script>
-<script src="javascript/Box2D/Collision/b2Bound.js" type="text/javascript"></script>
-<script src="javascript/Box2D/Common/Math/b2Mat22.js" type="text/javascript"></script>
-<script src="javascript/Box2D/Dynamics/b2BoundaryListener.js" type="text/javascript"></script>
-<script src="javascript/Box2D/Collision/Shapes/b2MassData.js" type="text/javascript"></script>
-<script src="javascript/Box2D/Dynamics/Joints/b2JointEdge.js" type="text/javascript"></script>
-<script src="javascript/Box2D/Collision/b2Collision.js" type="text/javascript"></script>
-<script src="javascript/Box2D/Dynamics/b2ContactListener.js" type="text/javascript"></script>
-<script src="javascript/Box2D/Collision/b2PairCallback.js" type="text/javascript"></script>
-<script src="javascript/Box2D/Dynamics/Joints/b2JointDef.js" type="text/javascript"></script>
-<script src="javascript/Box2D/Collision/b2Proxy.js" type="text/javascript"></script>
-<script src="javascript/Box2D/Common/b2Color.js" type="text/javascript"></script>
-<script src="javascript/Box2D/Collision/Shapes/b2FilterData.js" type="text/javascript"></script>
-<script src="javascript/Box2D/Collision/b2PairManager.js" type="text/javascript"></script>
-<script src="javascript/Box2D/Dynamics/Contacts/b2ContactSolver.js" type="text/javascript"></script>
-<script src="javascript/Box2D/Collision/b2BoundValues.js" type="text/javascript"></script>
-<script src="javascript/Box2D/Collision/b2Segment.js" type="text/javascript"></script>
-<script src="javascript/Box2D/Collision/Features.js" type="text/javascript"></script>
-<script src="javascript/Box2D/Dynamics/Joints/b2MouseJointDef.js" type="text/javascript"></script>
-<script src="javascript/Box2D/Dynamics/Contacts/b2ContactConstraintPoint.js" type="text/javascript"></script>
-<script src="javascript/Box2D/Dynamics/Contacts/b2ContactRegister.js" type="text/javascript"></script>
-<script src="javascript/Box2D/Dynamics/b2DestructionListener.js" type="text/javascript"></script>
-<script src="javascript/Box2D/Dynamics/Joints/b2PulleyJointDef.js" type="text/javascript"></script>
-<script src="javascript/Box2D/Dynamics/Joints/b2Jacobian.js" type="text/javascript"></script>
-<script src="javascript/Box2D/Dynamics/b2DebugDraw.js" type="text/javascript"></script>
-<script src="javascript/Box2D/Dynamics/Contacts/b2ContactEdge.js" type="text/javascript"></script>
-<script src="javascript/Box2D/Common/Math/b2Sweep.js" type="text/javascript"></script>
-<script src="javascript/Box2D/Dynamics/Contacts/b2ContactConstraint.js" type="text/javascript"></script>
-<script src="javascript/Box2D/Collision/b2Distance.js" type="text/javascript"></script>
-<script src="javascript/Box2D/Collision/Shapes/b2Shape.js" type="text/javascript"></script>
-<script src="javascript/Box2D/Common/Math/b2XForm.js" type="text/javascript"></script>
-<script src="javascript/Box2D/Dynamics/Joints/b2DistanceJointDef.js" type="text/javascript"></script>
-<script src="javascript/Box2D/Collision/b2OBB.js" type="text/javascript"></script>
-<script src="javascript/Box2D/Dynamics/b2BodyDef.js" type="text/javascript"></script>
-<script src="javascript/Box2D/Dynamics/Joints/b2PrismaticJointDef.js" type="text/javascript"></script>
-<script src="javascript/Box2D/Collision/b2ContactID.js" type="text/javascript"></script>
-<script src="javascript/Box2D/Dynamics/Joints/b2RevoluteJointDef.js" type="text/javascript"></script>
-<script src="javascript/Box2D/Collision/Shapes/b2CircleShape.js" type="text/javascript"></script>
-<script src="javascript/Box2D/Dynamics/Joints/b2Joint.js" type="text/javascript"></script>
-<script src="javascript/Box2D/Dynamics/Joints/b2GearJoint.js" type="text/javascript"></script>
-<script src="javascript/Box2D/Dynamics/Joints/b2GearJointDef.js" type="text/javascript"></script>
-<script src="javascript/Box2D/Collision/b2BroadPhase.js" type="text/javascript"></script>
-<script src="javascript/Box2D/Collision/b2TimeOfImpact.js" type="text/javascript"></script>
-<script src="javascript/Box2D/Collision/Shapes/b2ShapeDef.js" type="text/javascript"></script>
-<script src="javascript/Box2D/Collision/Shapes/b2PolygonDef.js" type="text/javascript"></script>
-<script src="javascript/Box2D/Dynamics/Contacts/b2Contact.js" type="text/javascript"></script>
-<script src="javascript/Box2D/Dynamics/Joints/b2DistanceJoint.js" type="text/javascript"></script>
-<script src="javascript/Box2D/Dynamics/b2Body.js" type="text/javascript"></script>
-<script src="javascript/Box2D/Dynamics/b2ContactFilter.js" type="text/javascript"></script>
-<script src="javascript/Box2D/Collision/Shapes/b2PolygonShape.js" type="text/javascript"></script>
-<script src="javascript/Box2D/Dynamics/Contacts/b2ContactResult.js" type="text/javascript"></script>
-<script src="javascript/Box2D/Dynamics/b2Island.js" type="text/javascript"></script>
-<script src="javascript/Box2D/Collision/b2ManifoldPoint.js" type="text/javascript"></script>
-<script src="javascript/Box2D/Common/Math/b2Math.js" type="text/javascript"></script>
-<script src="javascript/Box2D/Collision/Shapes/b2CircleDef.js" type="text/javascript"></script>
-<script src="javascript/Box2D/Collision/b2ContactPoint.js" type="text/javascript"></script>
-<script src="javascript/Box2D/Dynamics/Contacts/b2PolygonContact.js" type="text/javascript"></script>
-<script src="javascript/Box2D/Dynamics/Joints/b2MouseJoint.js" type="text/javascript"></script>
-<script src="javascript/Box2D/Dynamics/Contacts/b2CircleContact.js" type="text/javascript"></script>
-<script src="javascript/Box2D/Dynamics/Joints/b2PulleyJoint.js" type="text/javascript"></script>
-<script src="javascript/Box2D/Dynamics/Joints/b2RevoluteJoint.js" type="text/javascript"></script>
-<script src="javascript/Box2D/Dynamics/Joints/b2PrismaticJoint.js" type="text/javascript"></script>
-<script src="javascript/Box2D/Collision/ClipVertex.js" type="text/javascript"></script>
-<script src="javascript/Box2D/Dynamics/Contacts/b2NullContact.js" type="text/javascript"></script>
-<script src="javascript/Box2D/Dynamics/Contacts/b2PolyAndCircleContact.js" type="text/javascript"></script>
-<script src="javascript/Box2D/Dynamics/b2ContactManager.js" type="text/javascript"></script>
-<script src="javascript/Box2D/Dynamics/b2World.js" type="text/javascript"></script>
+<!DOCTYPE html>
+<script src="javascript/Box2D/Common/b2Settings.js"></script>
+<script src="javascript/Box2D/Common/Math/b2Vec2.js"></script>
+<script src="javascript/Box2D/Collision/b2BufferedPair.js"></script>
+<script src="javascript/Box2D/Collision/b2AABB.js"></script>
+<script src="javascript/Box2D/Collision/b2Pair.js"></script>
+<script src="javascript/Box2D/Dynamics/b2TimeStep.js"></script>
+<script src="javascript/Box2D/Collision/b2Manifold.js"></script>
+<script src="javascript/Box2D/Collision/b2Point.js"></script>
+<script src="javascript/Box2D/Collision/b2Bound.js"></script>
+<script src="javascript/Box2D/Common/Math/b2Mat22.js"></script>
+<script src="javascript/Box2D/Dynamics/b2BoundaryListener.js"></script>
+<script src="javascript/Box2D/Collision/Shapes/b2MassData.js"></script>
+<script src="javascript/Box2D/Dynamics/Joints/b2JointEdge.js"></script>
+<script src="javascript/Box2D/Collision/b2Collision.js"></script>
+<script src="javascript/Box2D/Dynamics/b2ContactListener.js"></script>
+<script src="javascript/Box2D/Collision/b2PairCallback.js"></script>
+<script src="javascript/Box2D/Dynamics/Joints/b2JointDef.js"></script>
+<script src="javascript/Box2D/Collision/b2Proxy.js"></script>
+<script src="javascript/Box2D/Common/b2Color.js"></script>
+<script src="javascript/Box2D/Collision/Shapes/b2FilterData.js"></script>
+<script src="javascript/Box2D/Collision/b2PairManager.js"></script>
+<script src="javascript/Box2D/Dynamics/Contacts/b2ContactSolver.js"></script>
+<script src="javascript/Box2D/Collision/b2BoundValues.js"></script>
+<script src="javascript/Box2D/Collision/b2Segment.js"></script>
+<script src="javascript/Box2D/Collision/Features.js"></script>
+<script src="javascript/Box2D/Dynamics/Joints/b2MouseJointDef.js"></script>
+<script src="javascript/Box2D/Dynamics/Contacts/b2ContactConstraintPoint.js"></script>
+<script src="javascript/Box2D/Dynamics/Contacts/b2ContactRegister.js"></script>
+<script src="javascript/Box2D/Dynamics/b2DestructionListener.js"></script>
+<script src="javascript/Box2D/Dynamics/Joints/b2PulleyJointDef.js"></script>
+<script src="javascript/Box2D/Dynamics/Joints/b2Jacobian.js"></script>
+<script src="javascript/Box2D/Dynamics/b2DebugDraw.js"></script>
+<script src="javascript/Box2D/Dynamics/Contacts/b2ContactEdge.js"></script>
+<script src="javascript/Box2D/Common/Math/b2Sweep.js"></script>
+<script src="javascript/Box2D/Dynamics/Contacts/b2ContactConstraint.js"></script>
+<script src="javascript/Box2D/Collision/b2Distance.js"></script>
+<script src="javascript/Box2D/Collision/Shapes/b2Shape.js"></script>
+<script src="javascript/Box2D/Common/Math/b2XForm.js"></script>
+<script src="javascript/Box2D/Dynamics/Joints/b2DistanceJointDef.js"></script>
+<script src="javascript/Box2D/Collision/b2OBB.js"></script>
+<script src="javascript/Box2D/Dynamics/b2BodyDef.js"></script>
+<script src="javascript/Box2D/Dynamics/Joints/b2PrismaticJointDef.js"></script>
+<script src="javascript/Box2D/Collision/b2ContactID.js"></script>
+<script src="javascript/Box2D/Dynamics/Joints/b2RevoluteJointDef.js"></script>
+<script src="javascript/Box2D/Collision/Shapes/b2CircleShape.js"></script>
+<script src="javascript/Box2D/Dynamics/Joints/b2Joint.js"></script>
+<script src="javascript/Box2D/Dynamics/Joints/b2GearJoint.js"></script>
+<script src="javascript/Box2D/Dynamics/Joints/b2GearJointDef.js"></script>
+<script src="javascript/Box2D/Collision/b2BroadPhase.js"></script>
+<script src="javascript/Box2D/Collision/b2TimeOfImpact.js"></script>
+<script src="javascript/Box2D/Collision/Shapes/b2ShapeDef.js"></script>
+<script src="javascript/Box2D/Collision/Shapes/b2PolygonDef.js"></script>
+<script src="javascript/Box2D/Dynamics/Contacts/b2Contact.js"></script>
+<script src="javascript/Box2D/Dynamics/Joints/b2DistanceJoint.js"></script>
+<script src="javascript/Box2D/Dynamics/b2Body.js"></script>
+<script src="javascript/Box2D/Dynamics/b2ContactFilter.js"></script>
+<script src="javascript/Box2D/Collision/Shapes/b2PolygonShape.js"></script>
+<script src="javascript/Box2D/Dynamics/Contacts/b2ContactResult.js"></script>
+<script src="javascript/Box2D/Dynamics/b2Island.js"></script>
+<script src="javascript/Box2D/Collision/b2ManifoldPoint.js"></script>
+<script src="javascript/Box2D/Common/Math/b2Math.js"></script>
+<script src="javascript/Box2D/Collision/Shapes/b2CircleDef.js"></script>
+<script src="javascript/Box2D/Collision/b2ContactPoint.js"></script>
+<script src="javascript/Box2D/Dynamics/Contacts/b2PolygonContact.js"></script>
+<script src="javascript/Box2D/Dynamics/Joints/b2MouseJoint.js"></script>
+<script src="javascript/Box2D/Dynamics/Contacts/b2CircleContact.js"></script>
+<script src="javascript/Box2D/Dynamics/Joints/b2PulleyJoint.js"></script>
+<script src="javascript/Box2D/Dynamics/Joints/b2RevoluteJoint.js"></script>
+<script src="javascript/Box2D/Dynamics/Joints/b2PrismaticJoint.js"></script>
+<script src="javascript/Box2D/Collision/ClipVertex.js"></script>
+<script src="javascript/Box2D/Dynamics/Contacts/b2NullContact.js"></script>
+<script src="javascript/Box2D/Dynamics/Contacts/b2PolyAndCircleContact.js"></script>
+<script src="javascript/Box2D/Dynamics/b2ContactManager.js"></script>
+<script src="javascript/Box2D/Dynamics/b2World.js"></script>
