--- a/test.html
+++ b/test.html
@@ -1,6 +1,6 @@
-<!doctype HTML>
+<!DOCTYPE HTML>
 <script src='box2d.js'></script>
-<script src="extend.js" type="text/javascript"></script>
+<script src="extend.js"></script>
 <canvas id="canvas" width="640"  height="400" moz-opaque="true">
 </canvas>
 <script
